# Traffic-Light-Simulation-System

./: .gitignore  README.md
pygame_app/: README.md  app.py  main.py  pyproject.toml  simulation.py  ui.py
streamlit_app/: README.md  app.py  diagram.py  diagram_layout.py  petri_net.py  requirements.txt  simulation_engine.py  ui_components.py  utils.py
